--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>post-application</title>
+    <script src="https://kit.fontawesome.com/476621592f.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
